welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: not found: value l
  recule(l-1)
         ^Array2:39: error: not enough arguments for method coloriage: (T: Array[java.awt.Color], decal: Int)Unit.
Unspecified value parameter decal.
    coloriage(tableau)
             ^